# QuorumProof

./: .gitignore  BATCH_LOAD_TESTING.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISSUE_558_GUIDE.md  SOLUTION_ISSUE_558.md  create_feature_branch.sh  deny.toml  setup_issue_558.py  setup_pr_558.sh
.github/workflows/: backup.yml  benchmarks.yml  ci.yml  deploy-multi-region.yml  security-patching.yml
api-server/: package-lock.json  package.json
api-server/src/: analytics.ts  credentials.js  index.js  index.ts  notifications.ts  soroban.ts
api-server/src/routes/: credentials.ts  notifications.ts  reports.ts  slices.ts
api-server/tests/: credentials.test.js  credentials.test.ts  reports.test.ts  search.test.ts  slices.test.ts
benches/: load_test_batch_operations.rs
benches/tests/: benchmarks.rs
contracts/integration_tests/src/: contract_analytics.rs  contract_upgrade_testing.rs  lib.rs  (+3 more)
contracts/quorum_proof/: API.md  Cargo.toml  fuzz_tests.rs
contracts/quorum_proof/src/: lib.rs  proptest_credentials.rs  proptest_slices.rs  state_validation.rs  tests_new_features.rs  version.rs
docs/: audit-log-format.md  backup-system.md  contract-monitoring.md  contract-upgrade-strategy.md  credential-types.md  deployment-checklist.md  disaster-recovery.md  gdpr-compliance.md  infrastructure-improvements.md  monitoring-guide.md  multi-region-deployment.md  operational-runbook.md  privacy-guide.md  sdk-methods-reference.md  security-best-practices.md  threat-model.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  stellar.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_batch_operations.rs  fuzz_credential_issuance.rs  fuzz_credential_metadata.rs  fuzz_quorum_proof.rs  fuzz_sbt_registry.rs
monitoring/: docker-compose.yml
monitoring/exporter/: Dockerfile  __init__.py  exporter.py  metrics.py  requirements.txt
monitoring/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
scripts/: backup.sh  benchmark_compare.sh  deploy_multi_region.sh  failover.sh  restore_from_backup.sh  snapshot.sh  verify_snapshot.sh
(+44 files in other folders)
